# ytx

./: .gitignore  LICENSE  README.md  pyproject.toml  subtitle_translation.json  test_mlx.py  test_videos.py  ytx-cli-docs.md
.claude/skills/ytx/: SKILL.md
docs/: index.html
ytx/: cli.py  config.py  doctor.py  formats.py  interactive.py  outputs.py  subtitles.py  transcribe.py  translate.py  youtube.py
