[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ytx"
version = "0.1.0"
description = "Local-first command-line tool for YouTube transcripts and translation"
authors = [
    { name = "Developer" }
]
requires-python = ">=3.10"
dependencies = [
    "yt-dlp",
    "faster-whisper",
    "argostranslate",
    "questionary",
    "python-dotenv",
    "rich",
    "pycountry",
    "litellm",
    "mlx-whisper; sys_platform == 'darwin' and platform_machine == 'arm64'"
]

[tool.setuptools.packages.find]
include = ["ytx", "ytx.*"]

[project.scripts]
ytx = "ytx.cli:main"
