[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ytx"
version = "1.0.0"
description = "Local-first CLI for YouTube transcription & AI translation — Apple Silicon accelerated"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "ytx contributors" }
]
requires-python = ">=3.10"
keywords = ["youtube", "transcription", "whisper", "translation", "subtitles", "cli", "apple-silicon", "mlx"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "yt-dlp",
    "faster-whisper",
    "argostranslate",
    "questionary",
    "python-dotenv",
    "rich",
    "pycountry",
    "litellm",
    "mlx-whisper; sys_platform == 'darwin' and platform_machine == 'arm64'"
]

[tool.setuptools.packages.find]
include = ["ytx", "ytx.*"]

[project.scripts]
ytx = "ytx.cli:main"
